Changes to landing page
1. Replaced images with public domain images - from http://pixabay.com.
2. Changed text size of carousel caption.
3. Added logo favicon
4. Added branding on navbar-right + link ref to homepage
5. Changed email to admin@bitrule.com
6. Edited captions in most pages

--- a/hp/WebContent/landing/css/bootstrap.css
+++ b/hp/WebContent/landing/css/bootstrap.css
@@ -60,6 +60,11 @@ a:hover {
   outline: 0;
 }
 
+h0 {
+  margin: 0.67em 0;
+  font-size: 2em;
+}
+
 h1 {
   margin: 0.67em 0;
   font-size: 2em;
@@ -389,6 +394,7 @@ hr {
   border: 0;
 }
 
+h0,
 h1,
 h2,
 h3,
@@ -471,6 +477,11 @@ h6 .small {
 h1,
 .h1 {
   font-size: 36px;
+}
+
+h0,
+.h0 {
+  font-size: 65px;
 }
 
 h2,
