--- a/hp/WebContent/css/bitrule.css
+++ b/hp/WebContent/css/bitrule.css
@@ -35,6 +35,46 @@ body {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.carousel-caption .btn {
+  text-shadow: none;
+}
+
+@media screen and (min-width: 768px) {
+  .carousel-control .glyphicons-chevron-left,
+  .carousel-control .glyphicons-chevron-right,
+  .carousel-control .icon-prev,
+  .carousel-control .icon-next {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+    margin-left: -15px;
+    font-size: 30px;
+  }
+  .carousel-caption {
+    right: 20%;
+    left: 20%;
+    padding-bottom: 80px;
+  }
+  .carousel-indicators {
+    bottom: 20px;
+  }
+}
+
+
+
 /* Carousel base class */
 .carousel {
   height: 500px;
@@ -148,7 +188,7 @@ body {
 }
 
 h0 {
-  margin: 0.67em 0;
+  margin: 0.72em 0;
   font-size: 2em;
 }
 
